--- a/content/HW2.html
+++ b/content/HW2.html
@@ -108,14 +108,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>你的學號 - 2021 Fall 計算機程式 作業網站</h1>
+                <h1>41023109 - 2021 Fall 計算機程式 作業網站</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">你的學號 - 2021 Fall 計算機程式 作業網站</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">41023109 - 2021 Fall 計算機程式 作業網站</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='run.html'>run</a></li></ul><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,15 +139,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3<br /><h1>HW2</h1>
-<p>HW2 - 可攜程式系統與個人網站佔學期成績 20%.</p>
-<p><span style="background-color: #ffff99;">HW2 必須在 2021.11.03 22:00 之前完成.</span></p>
-<p><a href="https://github.com/mdecourse/cp2021/discussions/9">HW2 具體項目成果回報區</a>將於 2021.10.25 開啟, 於 <span style="background-color: #ff99cc;">2021.11.03 22:00 關閉</span></p>
-<p>可攜程式系統與 Python 範例程式收集整理</p>
-<p>1. 請準備一個至少 64 GB 大小的 USB 3.0 以上隨身碟 (或外接 SSD), 根據 <a href="https://mde.tw/cp2021/content/Task2.html">Task2</a> 中的說明, 建立自己的可攜程式系統. </p>
-<p>2. 請登入 Github 帳號後, 連線至 <a href="https://github.com/mdecourse/cp2021_hw">https://github.com/mdecourse/cp2021_hw</a> 後, 透過 <span style="background-color: #00ff00;">Use this template</span> 按鈕建立自己的 cp2021_hw 倉儲. 並至該倉儲的 Settings -&gt; Pages -&gt; Source 將 main 分支設為 Github Pages 的 root (也就是選擇將倉儲的 main 分支設為對應網站的根目錄).</p>
-<p>3. 請將 HW1 與 HW2 的作業內容登錄至個人的 cp2021_hw 倉儲與網站中. (學習如何透過 git 指令修改倉儲中的版本內容)</p>
-<p>4. 請在個人作業網站的 HW2 區域下增設一個 H2 頁面, 將該網頁標題命名為 run, 可以如 <a href="https://mde.tw/cp2021/content/run.html">run</a> 頁面中的內容, 並且利用此頁面收集 Python 範例程式. (例如: 可自動執行的貪食蛇: <a href="https://mde.tw/cp2021/content/run.html?src=https://gist.githubusercontent.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439/raw/2160a12b9fec9707a120a383ed5d38b9b78a02cf/snake.py">https://mde.tw/cp2021/content/run.html?src=https://gist.githubusercontent.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439/raw/2160a12b9fec9707a120a383ed5d38b9b78a02cf/snake.py</a> 將 <a href="https://gist.github.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439">https://gist.github.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439</a> 作為 <a href="https://mde.tw/cp2021/content/run.html">https://mde.tw/cp2021/content/run.html</a> 頁面中 src 變數的值, 就可以在頁面中導入程式碼並執行)</p><br />HW1 << <a href='HW1.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3</div>
+    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='run.html'>Next</a> >> run<br /><h1>HW2</h1>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW2 - 可攜程序系統與個人網站佔一周成績20%。</span></span></p>
+<p><span style="background-color: #ffff99;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW2必須在2021.11.03 22:00之前完成。</span></span></span></p>
+<p><a href="https://github.com/mdecourse/cp2021/discussions/9"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW2具體項目成果回報區</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">將於2021.10.25開啟，於</span></span><span style="background-color: #ff99cc;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">2021.11.03 22:00關閉</span></span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">可攜程序系統與Python範例程序收集整理</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">1. 請準備一個大小至少 64 GB 的 USB 3.0 以上隨身碟（或隨身碟），根據</span></span><a href="https://mde.tw/cp2021/content/Task2.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Task2</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">中的說明，建立自己的可攜程序系統。 </span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">2.請登入Github線賬號後，連至</span></span><a href="https://github.com/mdecourse/cp2021_hw"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecourse/cp2021_hw</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">後，</span></span><span style="background-color: #00ff00;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">通過該模板</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">按鈕創建自己的cp2021_hw 。</span><span style="vertical-align: inherit;">並至該互聯網的設置 -&gt; 頁面 -&gt; 源將主分支設為 Github 頁面根目錄（也就是選擇將門戶的主分支設為 設為根目錄）。</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">3. 進入HW1與HW2的作業內容登錄至個人的cp2021_hw網上與網站中。</span><span style="vertical-align: inherit;">（如何通過git指令修改學習中的版本內容）</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">4.請在個人作業網站的HW2區域下增設一個H2頁面，網頁標題可以命名為運行，如</span></span><a href="https://mde.tw/cp2021/content/run.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">運行</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">頁面中的內容，並且利用此頁面收集Python範例程序。</span><span style="vertical-align: inherit;">（例如：可自動執行的貪食蛇：</span></span><a href="https://mde.tw/cp2021/content/run.html?src=https://gist.githubusercontent.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439/raw/2160a12b9fec9707a120a383ed5d38b9b78a02cf/snake.py"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> ://mde.tw/cp2021/content/run.html </span><a href="https://mde.tw/cp2021/content/run.html?src=https://gist.githubusercontent.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439/raw/2160a12b9fec9707a120a383ed5d38b9b78a02cf/snake.py"><span style="vertical-align: inherit;">?</span></a><span style="vertical-align: inherit;"> src </span><a href="https://mde.tw/cp2021/content/run.html?src=https://gist.githubusercontent.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439/raw/2160a12b9fec9707a120a383ed5d38b9b78a02cf/snake.py"><span style="vertical-align: inherit;">=https:</span></a><span style="vertical-align: inherit;"> //gist.githubusercontent.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439/raw/2160a12b9fec920b將a828fc92730a88d28fc9703730700 </span></span><a href="https://gist.github.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://gist.github.com/mdecourse/d306a1f57e53bfd6466eaae20bcb9439</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">作為</span></span><a href="https://mde.tw/cp2021/content/run.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://mde.tw/cp2021/content/run.html</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">頁面中的src變數的值，就可以在頁面中導入程式碼並執行</span><span style="vertical-align: inherit;">）</span></span></p>
+<br />HW1 << <a href='HW1.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
         
     <!-- footer -->
       <div class="container">
