--- a/content/W10.html
+++ b/content/W10.html
@@ -2,6 +2,7 @@
         <head>
         <title>cp2021 homework site</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -138,14 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Exam.html'>Next</a> >> Exam<br /><h1>About</h1>
-<p>這是計算機程式課程 2021 Fall 的作業倉儲與網站 template</p>
-<hr/>
-<p>你的學號</p>
-<p>網站倉儲: <a href="https://github.com/Yu-Fang-Hong/cp2021_hw">https://github.com/Yu-Fang-Hong/cp2021_hw</a></p>
-<p><a href="https://github.com/mdecourse/cp2021_hw"></a>網站連結:<span> </span><a href="https://yu-fang-hong.github.io/cp2021_hw/">https://yu-fang-hong.github.io/cp2021_hw/</a></p>
-<p><a href="https://yu-fang-hong.github.io/cp2021_hw/content/index.html"></a>其他與個人或作業相關資料說明或介紹</p>
-<br /> <a href='Exam.html'>Next</a> >> Exam</div>
+    <div id="tipue_search_content">run << <a href='run.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3<br /><h1>W10</h1>
+<br />run << <a href='run.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3</div>
         
     <!-- footer -->
       <div class="container">
