--- a/content/index.html
+++ b/content/index.html
@@ -127,7 +127,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='run.html'>run</a></li></ul><li><a href='W10.html'>W10</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -138,14 +138,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Exam.html'>Next</a> >> Exam<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='run.html'>Next</a> >> run<br /><h1>About</h1>
 <p>這是計算機程式課程 2021 Fall 的作業倉儲與網站 template</p>
 <hr/>
 <p>你的學號</p>
 <p>網站倉儲: <a href="https://github.com/Yu-Fang-Hong/cp2021_hw">https://github.com/Yu-Fang-Hong/cp2021_hw</a></p>
 <p><a href="https://github.com/mdecourse/cp2021_hw"></a>網站連結:<span> </span><a href="https://yu-fang-hong.github.io/cp2021_hw/">https://yu-fang-hong.github.io/cp2021_hw/</a></p>
 <p><a href="https://yu-fang-hong.github.io/cp2021_hw/content/index.html"></a>其他與個人或作業相關資料說明或介紹</p>
-<br /> <a href='Exam.html'>Next</a> >> Exam</div>
+<br /> <a href='run.html'>Next</a> >> run</div>
         
     <!-- footer -->
       <div class="container">
