--- a/content/rungist src.html
+++ b/content/rungist src.html
@@ -2,7 +2,7 @@
         <head>
         <title>cp2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,8 +139,51 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW2 << <a href='HW2.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3<br /><h1>W10</h1>
-<br />HW2 << <a href='HW2.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3</div>
+    <div id="tipue_search_content">rungist << <a href='rungist.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam<br /><h1>rungist src</h1>
+<p>以下為上一頁 rungist 的原始碼:</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">&lt;h2&gt;rungist&lt;/h2&gt;
+&lt;p&gt;rungist 在頁面中採 Javascript 呼叫 Brython 函式的方式, 讓使用者可以直接以 URL Get 執行 Gist 上的 Brython 程式. 建構的目的是讓學員可以利用 URL 繳交統一格式的 Brython 作業程式. 只要在 rungist 頁面加上 ?src=gist_url, 就可以將靜態繪圖或 animation 呈現在畫面中.&lt;/p&gt;
+&lt;p&gt;以下連結左邊為 local 動態網頁編輯用, 而右邊的連結則為遠端 rungist 的 demo 範例.&lt;/p&gt;
+&lt;p&gt;&lt;a href="/get_page/rungist?src=https://gist.githubusercontent.com/mdecourse/e896a4705a95ac8cc4147b355b0e87ef/raw/8954b8280c524c5781dc3c0b3565bc489d3aa3a3/cango_gear1.py"&gt;Cango gear&lt;/a&gt; (for local link only) (&lt;a href="https://mde.tw/cp2021/content/rungist.html?src=https://gist.githubusercontent.com/mdecourse/e896a4705a95ac8cc4147b355b0e87ef/raw/8954b8280c524c5781dc3c0b3565bc489d3aa3a3/cango_gear1.py"&gt;Cango gear&lt;/a&gt;)&lt;/p&gt;
+&lt;p&gt;&lt;a href="/get_page/rungist?src=https://gist.githubusercontent.com/mdecourse/626206cf3b2a9a9a69f7ce4bb4a116f0/raw/970e2653a7207828b3814c2c867892903734522a/spur_set_num.py"&gt;Spur with form input&lt;/a&gt; (for local link only) (&lt;a href="https://mde.tw/cp2021/content/rungist.html?src=https://gist.githubusercontent.com/mdecourse/626206cf3b2a9a9a69f7ce4bb4a116f0/raw/970e2653a7207828b3814c2c867892903734522a/spur_set_num.py"&gt;Spur with form input&lt;/a&gt;)&lt;/p&gt;
+&lt;p&gt;&lt;a href="/get_page/rungist?src=https://gist.githubusercontent.com/mdecourse/e896a4705a95ac8cc4147b355b0e87ef/raw/8954b8280c524c5781dc3c0b3565bc489d3aa3a3/three_spur_rotating.py"&gt;local three gears&lt;/a&gt; (&lt;a href="https://mde.tw/cp2021/content/rungist.html?src=https://gist.githubusercontent.com/mdecourse/e896a4705a95ac8cc4147b355b0e87ef/raw/8954b8280c524c5781dc3c0b3565bc489d3aa3a3/three_spur_rotating.py"&gt;remote three gears&lt;/a&gt;)&lt;/p&gt;
+&lt;p&gt;&lt;a href="/get_page/rungist?src=https://gist.githubusercontent.com/mdecourse/379f02862e9dfd95dbc5241d4faa2ad4/raw/e3dc77e68bbfb8f00eef2e78d3c8d2323b0f17da/clock.py"&gt;local clock&lt;/a&gt; &lt;a href="https://mde.tw/cp2021/content/rungist.html?src=https://gist.githubusercontent.com/mdecourse/379f02862e9dfd95dbc5241d4faa2ad4/raw/e3dc77e68bbfb8f00eef2e78d3c8d2323b0f17da/clock.py"&gt;remote clock&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;&lt;a href="/get_page/rungist/1"&gt;rungist&lt;/a&gt; (for local edit)&lt;/p&gt;
+&lt;!-- 導入 brython 程式庫 --&gt;
+&lt;p&gt;&lt;/p&gt;
+&lt;script src="./../cmsimde/static/brython.js"&gt;&lt;/script&gt;
+&lt;script src="./../cmsimde/static/brython_stdlib.js"&gt;&lt;/script&gt;
+&lt;!-- 啟動 Brython --&gt;
+&lt;script&gt;// &lt;![CDATA[
+window.onload=function(){
+    brython();
+}
+// ]]&gt;&lt;/script&gt;
+&lt;!-- 頁面載入後執行 brythonListener() --&gt;
+&lt;script&gt;// &lt;![CDATA[
+$(document).ready( function() {
+    brythonListener();
+});
+// ]]&gt;&lt;/script&gt;
+&lt;!-- 建立讓 Javascript 執行的 brython 程式 --&gt;
+&lt;script type="text/python"&gt;// &lt;![CDATA[
+from browser import document
+from browser import window
+
+def run():
+    prog = open(document.query["src"]).read()
+    ns = {'__name__':'__main__'}
+    exec(prog, ns)
+
+# 透過 window 將 Brython 的 run() 函式與 Javascript 的  brythonListner 函式對應
+window.brythonListener = run()
+// ]]&gt;&lt;/script&gt;
+&lt;!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --&gt;
+&lt;div id="brython_div"&gt;&lt;/div&gt;
+&lt;!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 --&gt;
+&lt;script src="https://mde.tw/cp2021/cmsimde/static/Cango-24v03-min.js"&gt;&lt;/script&gt;
+&lt;script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"&gt;&lt;/script&gt;
+&lt;script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"&gt;&lt;/script&gt;</pre><br />rungist << <a href='rungist.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam</div>
         
     <!-- footer -->
       <div class="container">
