--- a/content/初階貪吃蛇.html
+++ b/content/初階貪吃蛇.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='自動貪吃蛇.html'>自動貪吃蛇</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW3 << <a href='HW3.html'>Previous</a> <a href='Final Project.html'>Next</a> >> Final Project<br /><h1>自動貪吃蛇</h1>
+    <div id="tipue_search_content">HW3 << <a href='HW3.html'>Previous</a> <a href='進階貪吃蛇.html'>Next</a> >> 進階貪吃蛇<br /><h1>初階貪吃蛇</h1>
 <!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
@@ -188,7 +188,7 @@ def run():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/Yu-Fang-Hong/4aeaef90a6c8e2dcee53d3c8346a16e0/raw/17809195f90c5304ef2cd4444ef8e7ceeaeb9ef5/%25E8%2587%25AA%25E5%258B%2595%25E8%25B2%25AA%25E5%2590%2583%25E8%259B%2587"
+        url = "https://gist.githubusercontent.com/Yu-Fang-Hong/a1368d5801471046c69df0012198382c/raw/04df600c20bd86a821a3217e1db761ecb1cbacda/%25E6%2589%258B%25E5%258B%2595%25E8%25B2%25AA%25E5%2590%2583%25E8%259B%2587"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -221,8 +221,9 @@ run()
 <p></p>
 <!-- 程式執行 ouput 區 -->
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console"></textarea></div>
-<!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 -->
-<div id="brython_div"></div><br />HW3 << <a href='HW3.html'>Previous</a> <a href='Final Project.html'>Next</a> >> Final Project</div>
+<div style="width: 100%; height: 100%;">
+<div></div>
+<!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></div><br />HW3 << <a href='HW3.html'>Previous</a> <a href='進階貪吃蛇.html'>Next</a> >> 進階貪吃蛇</div>
         
     <!-- footer -->
       <div class="container">
