--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -439,7 +439,7 @@ def run():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/Yu-Fang-Hong/a1368d5801471046c69df0012198382c/raw/04df600c20bd86a821a3217e1db761ecb1cbacda/%25E6%2589%258B%25E5%258B%2595%25E8%25B2%25AA%25E5%2590%2583%25E8%259B%2587"
+        url = "https://gist.githubusercontent.com/41023118/c03fe85f58a94d116e880b42f939618b/raw/327da7463c41b968aec92ce9b7495a64b0b34942/%25E6%2589%258B%25E5%258B%2595%25E8%25B2%25AA%25E5%2590%2583%25E8%259B%2587"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -472,10 +472,8 @@ run()
 <p></p>
 <!-- 程式執行 ouput 區 -->
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console"></textarea></div>
-<div style="width: 100%; height: 100%;">
-<div></div>
 <!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 -->
-<h2>進階貪吃蛇</h2>
+<div id="brython_div"></div><h2>進階貪吃蛇</h2>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
 <script src="/static/brython_stdlib.js"></script>
@@ -578,4 +576,4 @@ run()
 <p style="padding-left: 30px;"><a href="https://github.com/topics/browser-game">https://github.com/topics/browser-game</a></p>
 <p style="padding-left: 30px;"><a href="https://github.com/leereilly/games">https://github.com/leereilly/games</a></p>
 <p style="padding-left: 30px;"><a href="https://bmsleight.github.io/brython-blocks/">https://bmsleight.github.io/brython-blocks/</a></p>
-<p style="padding-left: 60px;"><a href="https://github.com/mdecourse/brython-blocks">https://github.com/mdecourse/brython-blocks</a></p></div>
+<p style="padding-left: 60px;"><a href="https://github.com/mdecourse/brython-blocks">https://github.com/mdecourse/brython-blocks</a></p>
