--- a/content/初階貪吃蛇.html
+++ b/content/初階貪吃蛇.html
@@ -188,7 +188,7 @@ def run():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/Yu-Fang-Hong/a1368d5801471046c69df0012198382c/raw/04df600c20bd86a821a3217e1db761ecb1cbacda/%25E6%2589%258B%25E5%258B%2595%25E8%25B2%25AA%25E5%2590%2583%25E8%259B%2587"
+        url = "https://gist.githubusercontent.com/Yu-Fang-Hong/a1368d5801471046c69df0012198382c/raw/32230c7c8cd72c332caee6d950d90facba0f1b44/%25E6%2589%258B%25E5%258B%2595%25E8%25B2%25AA%25E5%2590%2583%25E8%259B%2587"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -221,9 +221,8 @@ run()
 <p></p>
 <!-- 程式執行 ouput 區 -->
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console"></textarea></div>
-<div style="width: 100%; height: 100%;">
-<div></div>
-<!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></div><br />HW3 << <a href='HW3.html'>Previous</a> <a href='進階貪吃蛇.html'>Next</a> >> 進階貪吃蛇</div>
+<!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 -->
+<div id="brython_div"></div><br />HW3 << <a href='HW3.html'>Previous</a> <a href='進階貪吃蛇.html'>Next</a> >> 進階貪吃蛇</div>
         
     <!-- footer -->
       <div class="container">
