--- a/content/rungist src.html
+++ b/content/rungist src.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='Final.html'>Final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -183,7 +183,8 @@ window.brythonListener = run()
 &lt;!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 --&gt;
 &lt;script src="https://mde.tw/cp2021/cmsimde/static/Cango-24v03-min.js"&gt;&lt;/script&gt;
 &lt;script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"&gt;&lt;/script&gt;
-&lt;script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"&gt;&lt;/script&gt;</pre><br />rungist << <a href='rungist.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam</div>
+&lt;script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"&gt;&lt;/script&gt;</pre>
+<br />rungist << <a href='rungist.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam</div>
         
     <!-- footer -->
       <div class="container">
