--- a/content/rungist.html
+++ b/content/rungist.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='Final.html'>Final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,8 @@ img.add_border {
 <p><a href="/get_page/run?src=https://gist.githubusercontent.com/mdecourse/e896a4705a95ac8cc4147b355b0e87ef/raw/76c510c47d88c9c218130a4ebb2cadf59803a3c7/prairiedraw_fourbar.py">local fourbar</a> <a href="https://mde.tw/cp2021/content/run.html?src=https://gist.githubusercontent.com/mdecourse/e896a4705a95ac8cc4147b355b0e87ef/raw/76c510c47d88c9c218130a4ebb2cadf59803a3c7/prairiedraw_fourbar.py">remote fourbar</a> (準備納入: <a href="https://github.com/mdecourse/Wiper-Mechanism">https://github.com/mdecourse/Wiper-Mechanism</a>)</p>
 <p style="padding-left: 30px;"><a href="https://prairielearn.readthedocs.io/en/latest/PrairieDraw/">https://prairielearn.readthedocs.io/en/latest/PrairieDraw/</a></p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdecourse/PrairieDraw.js">https://github.com/mdecourse/PrairieDraw.js</a></p>
-<p><a href="/get_page/rungist/1">rungist</a> (for local edit)</p><br />run src << <a href='run src.html'>Previous</a> <a href='rungist src.html'>Next</a> >> rungist src</div>
+<p><a href="/get_page/rungist/1">rungist</a> (for local edit)</p>
+<br />run src << <a href='run src.html'>Previous</a> <a href='rungist src.html'>Next</a> >> rungist src</div>
         
     <!-- footer -->
       <div class="container">
