--- a/content/初階貪吃蛇.html
+++ b/content/初階貪吃蛇.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='run src.html'>run src</a></li></ul><li class='has-children'><a href='rungist.html'>rungist</a><ul class='dropdown'><li><a href='rungist src.html'>rungist src</a></li></li></ul></ul><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='SSH.html'>SSH</a><li><a href='SSH push.html'>SSH push</a><li><a href='SSH遇到問題.html'>SSH遇到問題</a></li></ul><li><a href='HW2.html'>HW2</a><li><a href='W10.html'>W10</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='初階貪吃蛇.html'>初階貪吃蛇</a><li><a href='進階貪吃蛇.html'>進階貪吃蛇</a></li></ul><li class='has-children'><a href='Final Project.html'>Final Project</a><ul class='dropdown'><li><a href='Final.html'>Final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -222,7 +222,8 @@ run()
 <!-- 程式執行 ouput 區 -->
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console"></textarea></div>
 <!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 -->
-<div id="brython_div"></div><br />HW3 << <a href='HW3.html'>Previous</a> <a href='進階貪吃蛇.html'>Next</a> >> 進階貪吃蛇</div>
+<div id="brython_div"></div>
+<br />HW3 << <a href='HW3.html'>Previous</a> <a href='進階貪吃蛇.html'>Next</a> >> 進階貪吃蛇</div>
         
     <!-- footer -->
       <div class="container">
